fixed visible scrollbars on language selection

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
